feat: Add test scripts for component analysis and test generation
- Created `test-app-analysis.js` to analyze components in App.js and log results.
- Added source map for `test-app-analysis.js`.
- Updated `test-extension.js` to use relative paths for test files and improved logging for analysis results.
- Introduced `test-generate.js` to generate tests for specific components based on analysis results, including handling of props and context dependencies.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,14 @@
       "preLaunchTask": "npm: watch"
     },
     {
+      "name": "Run Extension (No Watch)",
+      "type": "extensionHost",
+      "request": "launch",
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+      "outFiles": ["${workspaceFolder}/out/**/*.js"],
+      "preLaunchTask": ""
+    },
+    {
       "name": "Extension Tests",
       "type": "extensionHost",
       "request": "launch",
