feat: Add CustDxTreeDataV1 component and DataGrid integration
- Created CustDxTreeDataV1 component for rendering a data grid with customizable rows and columns.
- Implemented DataGrid component to utilize CustDxTreeDataV1 with predefined columns and row data from rowsData.json.
- Removed SimpleApp and its associated tests as they are no longer needed.
- Added rowsData.json to provide sample data for the DataGrid.
- Updated package.json to reflect version change and added Jest test environment configuration.
- Enhanced componentAnalyzer.ts to handle dynamic imports for Babel dependencies.
- Updated setupTests.js to conditionally mock Material-UI based on available packages.
- Added TestButton component for testing purposes.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -11,6 +11,15 @@ gulpfile.ts
 **/*.map
 **/*.tsbuildinfo
 node_modules/**
+!node_modules/@babel/**
+!node_modules/fast-glob/**
+!node_modules/debug/**
+!node_modules/@jridgewell/**
+!node_modules/jsesc/**
+!node_modules/js-tokens/**
+!node_modules/picocolors/**
+!node_modules/yallist/**
+!node_modules/ms/**
 .vscode-test-web/**
 **/.vscode/test.js
 **/.vscode-test/**
