--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-jest-test-generator",
   "displayName": "React Jest Test Generator",
   "description": "Generate Jest test cases for React components with Enzyme support. Automatically generates cheerio mocks and setupTests.js for React 16 projects.",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "publisher": "Datacenterx",
   "author": {
     "name": "Neelmani Sharma"
@@ -17,7 +17,7 @@
     "url": "https://github.com/coder-dcx/react-jest-test-generator/issues"
   },
   "engines": {
-    "vscode": "^1.70.0"
+    "vscode": "^1.75.0"
   },
   "categories": [
     "Other",
@@ -145,6 +145,7 @@
     }
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
     },
@@ -156,6 +157,9 @@
       "^cheerio$": "<rootDir>/__mocks__/cheerio.js",
       "^cheerio/(.*)$": "<rootDir>/__mocks__/cheerio.js"
     },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.(js|jsx|ts|tsx)",
       "<rootDir>/src/**/*.(test|spec).(js|jsx|ts|tsx)",
