feat: Refactor CustDxTreeDataV1 component to use DevExpress Grid and add tree data functionality
- Replaced the existing table structure with DevExpress Grid components for better performance and features.
- Implemented tree data structure support with expandable rows.
- Added custom cell rendering for various input types (dropdowns, text fields, checkboxes).
- Introduced state management for row updates and interactions.
- Created a new test file for CustDxTreeDataV1 with basic rendering tests and user interaction handling.
- Added a simple component for testing purposes.
- Updated package.json to include necessary dependencies and scripts.
- Enhanced component analysis to track default and named exports more effectively.
- Improved test generation logic to include safety checks for component imports.

test: Add unit tests for CustDxTreeDataV1 and DataGrid components

- Implemented unit tests using Enzyme for rendering and interaction verification.
- Created snapshot tests for consistent rendering checks.
- Added simple tests to verify component imports and functionality.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,7 @@
     {
       "type": "npm",
       "script": "compile",
+      "label": "npm: compile",
       "group": {
         "kind": "build",
         "isDefault": true
@@ -36,6 +37,7 @@
     {
       "type": "npm",
       "script": "pretest",
+      "label": "npm: pretest",
       "group": "test",
       "presentation": {
         "panel": "shared"
