--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-jest-test-generator",
   "displayName": "React Jest Test Generator",
   "description": "Generate Jest test cases for React components with Enzyme support. Automatically generates cheerio mocks and setupTests.js for React 16 projects.",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "publisher": "Datacenterx",
   "author": {
     "name": "Neelmani Sharma"
@@ -178,6 +178,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -195,6 +197,7 @@
     "enzyme-adapter-react-16": "^1.15.8",
     "eslint": "^8.28.0",
     "glob": "^8.1.0",
+    "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
     "mocha": "^10.1.0",
     "node-fetch": "^3.3.2",
